# pure

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile  mise.toml  mise.vm.toml
.codex/: AGENTS.md
.gemini/: settings.json
.github/: copilot-instructions.md
.github/actions/setup/: action.yml
.github/workflows/: build.yml  ci-workflows.yml  collect-coverage.yml  release.yml  run-static-checks.yml
.serena/: project.yml
coverage/: tarpaulin-report.html
docs/: README.md  architecture.md  configuration.md  testing.md  usage.md
docs/updates/: docker-cleanup.md
src/: config.rs  docker_cleanup.rs  error.rs  format.rs  lib.rs  main.rs  model.rs  path.rs  scanner.rs  utils.rs
src/app/: run.rs  scan.rs
src/cli/: mod.rs  run.rs  scan.rs
src/commands/: config_cmd.rs  mod.rs  run.rs  scan.rs
src/fs/: mod.rs  remove.rs  roots.rs  size.rs
src/output/: bytes.rs  mod.rs  progress.rs  prompt.rs  report.rs
src/scanners/: brew.rs  generic.rs  mod.rs  nodejs.rs  python.rs  rust.rs  xcode.rs
src/targets/: brew.rs  catalog.rs  category.rs  docker.rs  item.rs  mod.rs  name_matcher.rs  nodejs.rs  python.rs  report.rs  rust.rs  target.rs  xcode.rs
tests/: aliases.rs  cli.rs  config.rs  run.rs  runtime.rs  safety.rs  scan.rs
tests/cli/: aliases.rs  help_and_version.rs  mod.rs  run.rs  scan.rs
tests/harness/: mod.rs  test_context.rs
