[package]
name = "pure"
version = "0.1.0"
edition = "2024"

[dependencies]
byte-unit = "5.1"
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
dirs-next = "2.0"
globset = "0.4"
indicatif = "0.17"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
walkdir = "2.5"
thiserror = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
predicates = "3.1"
serial_test = "3.1"
tempfile = "3.10"
